--- a/index.html
+++ b/index.html
@@ -7,6 +7,84 @@
     <title>cv</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="header__container">
+                <div class="header__photo">
+                    <img src="#" alt="photo">
+                </div>
+                <div class="header__content">
+                    <nav class="header__menu">
+                        <ul class="header__menu-list">
+                            <li class="header__menu-item">
+                                <a href="#about me">about me</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#code example">code example</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#skills">skills</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#language">language</a>
+                            </li>
+                            <li class="header__menu-item">
+                                <a href="#contacts">contacts</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="header__info">
+                    <h1 class="header__title">Nariman Mirmanov</h1>
+                    <h2 class="header__subtitle">future webdev</h2>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="main__content">
+        <div class="container">
+            <section id="about me">
+                <h3>about me</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati officiis quo, voluptate commodi omnis vel molestiae ipsa voluptatem temporibus placeat, quidem cum aperiam, ducimus a tempora pariatur nam recusandae illo.
+            </section>
+            <section id="code example">
+                <h3>code example</h3>
+                <code>
+                    funtion sum(a, b) {
+                        return a + b;
+                    }
+                    let res = sum(1, 0);
+                    console.log(res);
+                </code>
+            </section>
+            <section id="skills">
+                <h3>skills</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JS</li>
+                </ul>
+            </section>
+            <section id="languge">
+                <h3>language</h3>
+                <ul>
+                    <li>Russian - native</li>
+                    <li>Kazakh - native</li>
+                    <li>English - A2</li>
+                </ul>
+            </section>
+            <section id="contacts">
+                <h3>contacts</h3>
+                
+            </section>
+
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+
+        </div>
+    </footer>
     
 </body>
 </html>
