--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <nav class="header__menu">
                         <ul class="header__menu-list">
                             <li class="header__menu-item">
-                                <a href="#about me">about me</a>
+                                <a href="#about_me">about me</a>
                             </li>
                             <li class="header__menu-item">
-                                <a href="#code example">code example</a>
+                                <a href="#code_example">code example</a>
                             </li>
                             <li class="header__menu-item">
                                 <a href="#skills">skills</a>
@@ -43,11 +43,11 @@
     </header>
     <div class="main__content">
         <div class="container">
-            <section id="about me">
+            <section id="about_me">
                 <h3>about me</h3>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati officiis quo, voluptate commodi omnis vel molestiae ipsa voluptatem temporibus placeat, quidem cum aperiam, ducimus a tempora pariatur nam recusandae illo.
             </section>
-            <section id="code example">
+            <section id="code_example">
                 <h3>code example</h3>
                 <code>
                     funtion sum(a, b) {
