--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv</title>
   </head>
   <body>
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="header__container">
           <div class="header__photo">
-            <img src="#" alt="photo" />
+            <img width="300" height="200" src="" alt="photo">
           </div>
           <div class="header__content">
             <nav class="header__menu">
