--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <header>
       <div class="container">
         <div class="header__container">
-          <div class="header__photo">
-            <img width="300" height="200" src="" alt="photo">
-          </div>
+          <div class="header__photo"></div>
           <div class="header__content">
             <nav class="header__menu">
               <ul class="header__menu-list">
