--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/icons/fav.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet" />
     <title>cv</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
         <div class="header__container">
           <div class="header__photo"></div>
@@ -16,19 +19,19 @@
             <nav class="header__menu">
               <ul class="header__menu-list">
                 <li class="header__menu-item">
-                  <a href="#about_me">about me</a>
+                  <a href="#about_me" class="menu__item-link">about me</a>
                 </li>
                 <li class="header__menu-item">
-                  <a href="#code_example">code example</a>
+                  <a href="#code_example" class="menu__item-link">code example</a>
                 </li>
                 <li class="header__menu-item">
-                  <a href="#skills">skills</a>
+                  <a href="#skills" class="menu__item-link">skills</a>
                 </li>
                 <li class="header__menu-item">
-                  <a href="#language">language</a>
+                  <a href="#language" class="menu__item-link">language</a>
                 </li>
                 <li class="header__menu-item">
-                  <a href="#contacts">contacts</a>
+                  <a href="#contacts" class="menu__item-link">contacts</a>
                 </li>
               </ul>
             </nav>
@@ -40,43 +43,50 @@
         </div>
       </div>
     </header>
-    <div class="main__content">
+    <main class="main">
       <div class="container">
-        <section id="about_me">
-          <h3>about me</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
-          officiis quo, voluptate commodi omnis vel molestiae ipsa voluptatem
-          temporibus placeat, quidem cum aperiam, ducimus a tempora pariatur nam
-          recusandae illo.
+        <section id="about_me" class="section__item">
+          <h3 class="section_title">about me</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+            officiis quo, voluptate commodi omnis vel molestiae ipsa voluptatem
+            temporibus placeat, quidem cum aperiam, ducimus a tempora pariatur nam
+            recusandae illo.</p>
         </section>
-        <section id="code_example">
-          <h3>code example</h3>
-          <code>
-            funtion sum(a, b) { return a + b; } let res = sum(1, 0);
-            console.log(res);
-          </code>
+        <section id="code_example" class="section__item">
+          <h3 class="section_title">code example</h3>
+          <div class="code_exam">
+            <code>
+              funtion sum(a, b) {
+                <br>
+                return a + b; } 
+              <br>
+              let res = sum(1, 0);
+              <br>
+              console.log(res);
+            </code>
+          </div>
         </section>
-        <section id="skills">
-          <h3>skills</h3>
+        <section id="skills" class="section__item">
+          <h3 class="section_title">skills</h3>
           <ul>
             <li>HTML</li>
             <li>CSS</li>
             <li>JS</li>
           </ul>
         </section>
-        <section id="languge">
-          <h3>language</h3>
+        <section id="languge" class="section__item">
+          <h3 class="section_title">language</h3>
           <ul>
             <li>Russian - native</li>
             <li>Kazakh - native</li>
             <li>English - A2</li>
           </ul>
         </section>
-        <section id="contacts">
-          <h3>contacts</h3>
+        <section id="contacts" class="section__item">
+          <h3 class="section_title">contacts</h3>
         </section>
       </div>
-    </div>
+    </main>
     <footer>
       <div class="container"></div>
     </footer>
