--- a/index.html
+++ b/index.html
@@ -14,37 +14,35 @@
     <header class="header">
       <div class="container">
         <div class="header__container">
-          <div class="header__photo"></div>
-          <div class="header__content">
-            <nav class="header__menu">
-              <ul class="header__menu-list">
-                <li class="header__menu-item">
+            <nav class="header__nav">
+              <ul class="header__nav-list">
+                <li class="header__nav-item">
                   <a href="#about_me" class="menu__item-link">about me</a>
                 </li>
-                <li class="header__menu-item">
+                <li class="header__nav-item">
                   <a href="#code_example" class="menu__item-link">code example</a>
                 </li>
-                <li class="header__menu-item">
+                <li class="header__nav-item">
                   <a href="#skills" class="menu__item-link">skills</a>
                 </li>
-                <li class="header__menu-item">
+                <li class="header__nav-item">
                   <a href="#language" class="menu__item-link">language</a>
                 </li>
-                <li class="header__menu-item">
+                <li class="header__nav-item">
                   <a href="#contacts" class="menu__item-link">contacts</a>
                 </li>
               </ul>
             </nav>
-          </div>
-          <div class="header__info">
-            <h1 class="header__title">Nariman Mirmanov</h1>
-            <h2 class="header__subtitle">future webdev</h2>
-          </div>
         </div>
       </div>
     </header>
     <main class="main">
       <div class="container">
+        <section class="main__info">
+          <h1 class="main__title">Nariman Mirmanov</h1>
+          <h2 class="main__subtitle">future webdev</h2>
+          <img src="assets/img/avatar.jpg" alt="avatar">
+        </section>
         <section id="about_me" class="section__item">
           <h3 class="section_title">about me</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
@@ -55,15 +53,12 @@
         <section id="code_example" class="section__item">
           <h3 class="section_title">code example</h3>
           <div class="code_exam">
-            <code>
+            <pre>
               funtion sum(a, b) {
-                <br>
                 return a + b; } 
-              <br>
               let res = sum(1, 0);
-              <br>
               console.log(res);
-            </code>
+            </pre>
           </div>
         </section>
         <section id="skills" class="section__item">
@@ -88,7 +83,9 @@
       </div>
     </main>
     <footer>
-      <div class="container"></div>
+      <div class="container">
+
+      </div>
     </footer>
   </body>
 </html>
