feat: update at home

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <header class="header">
       <div class="container">
         <div class="header__container">
-          <div class="header__photo"></div>
-          <div class="header__content">
-            <nav class="header__menu">
+           <nav class="header__menu">
               <ul class="header__menu-list">
                 <li class="header__menu-item">
                   <a href="#about_me" class="menu__item-link">about me</a>
@@ -34,17 +32,19 @@
                   <a href="#contacts" class="menu__item-link">contacts</a>
                 </li>
               </ul>
-            </nav>
-          </div>
-          <div class="header__info">
-            <h1 class="header__title">Nariman Mirmanov</h1>
-            <h2 class="header__subtitle">future webdev</h2>
-          </div>
+            </nav>         
         </div>
       </div>
     </header>
     <main class="main">
       <div class="container">
+        <section class="main__info">
+          <h1 class="main__title">Nariman Mirmanov</h1>
+          <h2 class="main__subtitle">future webdev</h2>
+          <div class="avatar">
+            <img src="assets/img/avatar.jpg" alt="avatar">
+          </div>
+        </section> 
         <section id="about_me" class="section__item">
           <h3 class="section_title">about me</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
