feat: update cv

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a href="https://t.me/narcash" title="telegram">@narcash</a>
               </li>
               <li class="section-item contacts-item">
-                <a href="https://discord." title="discord">narcash#</a>
+                <a href="https://discord." title="discord">narcash#3411</a>
               </li>
             </ul>
 
@@ -86,11 +86,12 @@
             <h3 class="section__title">code example</h3>
               <pre class="pre">
                 <code>
-                  funtion sum(a, b) {
-                    return a + b; } 
-                  let res = sum(1, 0);
-                  console.log(res);
-                </code>
+      funtion sum(a, b) {
+        return a + b; } 
+      let res = sum(1, 0);
+      console.log(res);
+              </code>
+              </div>
               </pre>
           </section>
           
@@ -106,9 +107,13 @@
         </div>
       </div>
     </main>
-    <footer>
-      <div class="container">
-
+    <footer class="footer">
+      <div class="footer__container">
+        <div>
+          © 2022
+          <a href="https://github.com/narcash" class="github nav-link">narcash</a>
+        </div>
+        <a href="https://rs.school/js/" class="rss">rss</a>
       </div>
     </footer>
   </body>
