--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
     <header class="header">
       <div class="container">
         <div class="header__container">
-
             <nav class="header__nav">
               <ul class="header__nav-list">
                 <li class="header__nav-item">
-                  <a href="#about_me" class="nav__item-link">about me</a>
+                  <a href="#summary" class="nav__item-link">summary</a>
                 </li>
                 <li class="header__nav-item">
                   <a href="#code_example" class="nav__item-link">code example</a>
                 </li>
                 <li class="header__nav-item">
                   <a href="#skills" class="nav__item-link">skills</a>
+                </li>
+                <li class="header__nav-item">
+                  <a href="#education" class="nav__item-link">education</a>
                 </li>
                 <li class="header__nav-item">
                   <a href="#language" class="nav__item-link">language</a>
@@ -51,22 +53,30 @@
             <h2 class="section__title">contacts</h2>
             <ul class="section-list">
               <li class="section-item contacts-item">
-                Ryazan, russia
+                <img class="contacts-svg" src="assets/svg/location.svg" alt="location">
+                <span>Ryazan, russia</span>
               </li>
               <li class="section-item contacts-item">
+                <img class="contacts-svg" src="assets/svg/email.svg" alt="email">
+                <span>Email: </span>
                 <a href="mailto:mirmanov1@mail.ru" title="email">mirmanov1@mail.ru</a>
               </li>
               <li class="section-item contacts-item">
+                <img class="contacts-svg" src="assets/svg/github.svg" alt="github">
+                <span>github: </span>
                 <a href="https://github.com/narcash" title="github">narcash</a>
               </li>
               <li class="section-item contacts-item">
+                <img class="contacts-svg" src="assets/svg/telegram.svg" alt="telegram">
+                <span>tg: </span>
                 <a href="https://t.me/narcash" title="telegram">@narcash</a>
               </li>
               <li class="section-item contacts-item">
+                <img class="contacts-svg" src="assets/svg/discord.svg" alt="discord">
+                <span>discord: </span>
                 <a href="https://discord." title="discord">narcash#3411</a>
               </li>
             </ul>
-
           </section>
           <section id="summary" class="section">
             <h3 class="section__title">summary</h3>
@@ -82,6 +92,23 @@
               <li>JS</li>
             </ul>
           </section>
+          <section id="education" class="section">
+            <h3 class="section__title">education</h3>
+            <ul>
+              <li>Ryazan State Agrotechnological
+                University
+                <br>
+                Named after P.A. Kostychev</li>
+            </ul>
+          </section>
+          <section id="language" class="section">
+            <h3 class="section__title">language</h3>
+            <ul class="section-list">
+              <li>Russian - native</li>
+              <li>Kazakh - native</li>
+              <li>English - A2</li>
+            </ul>
+          </section>
           <section id="code_example" class="section">
             <h3 class="section__title">code example</h3>
               <pre class="pre">
@@ -94,16 +121,6 @@
               </div>
               </pre>
           </section>
-          
-          <section id="language" class="section">
-            <h3 class="section__title">language</h3>
-            <ul>
-              <li>Russian - native</li>
-              <li>Kazakh - native</li>
-              <li>English - A2</li>
-            </ul>
-          </section>
-          
         </div>
       </div>
     </main>
@@ -113,7 +130,7 @@
           © 2022
           <a href="https://github.com/narcash" class="github nav-link">narcash</a>
         </div>
-        <a href="https://rs.school/js/" class="rss">rss</a>
+        <a href="https://rs.school/js/" class="rss"><span class="rss-text">rss</span></a>
       </div>
     </footer>
   </body>
