feat: update link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <li class="section-item contacts-item">
                 <img class="contacts-svg" src="assets/svg/discord.svg" alt="discord">
                 <span>discord: </span>
-                <a href="https://discord." title="discord">narcash#3411</a>
+                <a href="https://discord.gg/zUr7wWYPXE" title="discord">narcash#3411</a>
               </li>
             </ul>
           </section>
