--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
           <section id="skills" class="section">
             <h3 class="section__title">skills</h3>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JS</li>
+              <li>HTML - ✦ ✦ ✦ ✧ ✧</li>
+              <li>CSS - ✦ ✦ ✧ ✧ ✧</li>
+              <li>JS - ✦ ✧ ✧ ✧ ✧</li>
             </ul>
           </section>
           <section id="education" class="section">
