--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
             <h3 class="section__title">projects</h3>
             
           </section>
+          <section id="projects" class="section">
+            <h3 class="section__title">projects</h3>
+            
+          </section>
         </div>
       </div>
     </main>
