feat:add commit

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
               <li class="header__nav-item">
                 <a href="#contacts" class="nav__item-link">contacts</a>
               </li>
+              <li class="header__nav-item">
+                <a href="#projects" class="nav__item-link">projects</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -47,7 +50,7 @@
         <div class="main__container">
           <section class="section__profile" id="profile">
             <img
-              src="assets/img/avatar.jpg"
+              src="./assets/img/avatar.jpg"
               alt="avatar"
               class="section__profile-logo"
             />
@@ -62,7 +65,7 @@
               <li class="section-item contacts-item">
                 <img
                   class="contacts-svg"
-                  src="assets/svg/location.svg"
+                  src="./assets/svg/location.svg"
                   alt="location"
                 />
                 <span>Ryazan, russia</span>
@@ -70,7 +73,7 @@
               <li class="section-item contacts-item">
                 <img
                   class="contacts-svg"
-                  src="assets/svg/email.svg"
+                  src="./assets/svg/email.svg"
                   alt="email"
                 />
                 <span>Email: </span>
@@ -81,7 +84,7 @@
               <li class="section-item contacts-item">
                 <img
                   class="contacts-svg"
-                  src="assets/svg/github.svg"
+                  src="./assets/svg/github.svg"
                   alt="github"
                 />
                 <span>github: </span>
@@ -90,7 +93,7 @@
               <li class="section-item contacts-item">
                 <img
                   class="contacts-svg"
-                  src="assets/svg/telegram.svg"
+                  src="./assets/svg/telegram.svg"
                   alt="telegram"
                 />
                 <span>tg: </span>
@@ -99,7 +102,7 @@
               <li class="section-item contacts-item">
                 <img
                   class="contacts-svg"
-                  src="assets/svg/discord.svg"
+                  src="./assets/svg/discord.svg"
                   alt="discord"
                 />
                 <span>discord: </span>
@@ -154,6 +157,10 @@
                 console.log(res);
               </code>
             </pre>
+          </section>
+          <section id="projects" class="section">
+            <h3 class="section__title">projects</h3>
+            
           </section>
         </div>
       </div>
